--- a/square-triangles.htm
+++ b/square-triangles.htm
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Engranaje uwu</title>
+    <title>F con triangulos</title>
 </head>
 <body>
-    <h1>Circulo con puntas</h1>
+    <h1>F con triangulos</h1>
     <canvas id="glcanvas" width="800" height="800"></canvas>
 </body>
-<script src="circle-triangle-fan.js"></script>
+<script src="square-triangles.js"></script>
 </html>
